Fix: trending-searches dropdown being clipped by header overflow

--- a/css/responsive-header.css
+++ b/css/responsive-header.css
@@ -27,6 +27,7 @@
     header {
         flex-direction: column;
         height: 100%;
+        overflow: auto;
         position: absolute;
         width: 60%;
     }
